--- a/mern-stack/server/.env
+++ b/mern-stack/server/.env
@@ -1,10 +1,10 @@
-MONGODB_URI='mongodb+srv://anki:ankith01@cluster0.n6vnq.mongodb.net/mern-auth'
+MONGODB_URI='' // add your mongodb url here
 
-JWT_SECRET="secret@text";
+JWT_SECRET=""; // add secret text here
 
 NODE_ENV='development';
 
-SMTP_USER='no-reply@ankithkc.com'
-SMTP_PASS='Helloworld!01'
+SMTP_USER='' //your smtp userid
+SMTP_PASS='' //your smtp password
 
-SENDER_EMAIL='no-reply@ankithkc.com'
+SENDER_EMAIL='' //your sender email id here
