--- a/mern-stack/server/.env
+++ b/mern-stack/server/.env
@@ -2,7 +2,7 @@ MONGODB_URI='' // add your mongodb url here
 
 JWT_SECRET=""; // add secret text here
 
-NODE_ENV='development';
+NODE_ENV='';
 
 SMTP_USER='' //your smtp userid
 SMTP_PASS='' //your smtp password
